# 2025-Python-Best-Practices-Launchpad

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile
.github/workflows/: main.yml
src/my_package/: api.py  run.py
src/package/: module.py
tests/: integration_test.py  test_api.py  test_endpoints.py  test_module.py
