[project]
name = "my_package"
version = "0.1.0"
description = "A modern Python template."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dependencies = []
[tool.uv]
default-groups = ["dev"]

[tool.uv.dependency-group.dev]
dependencies = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit"
]
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "ARG",
    "SIM",
    "RUF",
    "UP",
    "ASYNC",
    "ANN",
    "NPY",
    "PT",
    "ERA",
    "EXE",
    "FA",
    "TD",
    "FLY",
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "ARG",
    "SIM",
    "RUF",
    "UP",
    "ASYNC",
    "ANN",
    "NPY",
    "PT",
    "ERA",
    "EXE",
    "FA",
    "TD",
    "FLY",
]

ignore = [
    "E501",
    "ANN001",
    "ANN002",
]
unfixable = [
    "F401",
    "F401",
]

[tool.uv.managed]
groups = ["default", "dev"]

[tool.uv.dependencies]
default = [
  "pytest",
  "mypy",
  "ruff",
  "pre-commit",
  "types-requests",
]